# outloud

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
outloud/: __init__.py  __main__.py  cli.py  cloud.py  config.py  downloader.py  exceptions.py  llm_pipeline.py  logger.py  qwen_llm.py  recorder.py  router.py  summarizer.py  transcriber.py  utils.py  youtube.py
tests/: test_cloud.py  test_config.py  test_downloader.py  test_exceptions.py  test_llm_pipeline.py  test_router.py  test_summarizer.py
